# arepo_solas_features

./: .gitignore  CMakeLists.txt  CosmoConfig  CosmoConfig.sh  GalConfig.sh  Makefile  README.md  Template-Config.sh  Untitled.ipynb  Untitled1.ipynb  check.py  defines_extra  example_cmake_build.sh  template_config.yaml
.ipynb_checkpoints/: Untitled1-checkpoint.ipynb
build-2/profile_util/: CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  git_revision.cpp
build-2/profile_util/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
celib/src/: CELib.h  CMakeLists.txt  Makefile  SNIIYields.c  depend.inc
celib/src/chtest.out.dSYM/Contents/: Info.plist
celib/src/chtest.out.dSYM/Contents/Resources/Relocations/aarch64/: chtest.out.yml
celib/src/yields.out.dSYM/Contents/: Info.plist
celib/src/yields.out.dSYM/Contents/Resources/Relocations/aarch64/: yields.out.yml
cmake/: AREPOCMakeUtils.cmake  parse_yaml.py
examples/galaxy_merger_star_formation_3d/: Config.sh  Config_ADDBACKGROUNDGRID.sh
src/: CMakeLists.txt
src/blackholes/: bh_density.c  bh_feedback.c  bh_jet_density.c  bh_proto.h  bh_refinement.c  bh_seed.c
src/cooling/: cooling.c
src/domain/: domain_exchange.c
src/fof/: fof_seeding.c  fof_seeding.h  fof_seeding_registry.c
src/gravity/: forcetree.h  forcetree_ewald.c
src/gravity/pm/: pm_periodic.c
src/init/: begrun.c  init.c
src/io/: logs.c  parameters.c  read_ic.c  restart.c
src/main/: allvars.c  allvars.h  main.c  proto.h  run.c  update.c
src/star_formation/: sfr_AGORA.c  sfr_eEOS.c  starformation.c
src/stars/: star_density.c  star_feedback.c
src/time_integration/: predict.c  timestep.c
src/utils/: system.c
